2016-11-11  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/nasl_ssh.c (get_ssh_port): Use value stored already instead of
	trying to cast it again from an already free'd string.

2016-11-11  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* base/openvas_file.c (openvas_export_file_name): Move format_state = 0
	assignment so it doesn't overwrite values set in the switch case block.

2016-11-10  Michael Wiegand <michael.wiegand@greenbone.net>

	Post branch version bump.

	* CMakeLists.txt: Set version to 9.1.0 and status to beta.

2016-11-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/exec.c (bool2cell, cell_cmp, expo): Use long int instead of int
	for value storage variables.

	* nasl/exec.h: Adjust function header.

2016-11-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 9.0.1.

2016-11-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-libraries 9.0.0 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Update version status from beta to stable.

2016-11-08  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* COPYING: Update. It was missing the separation of the osp module.

2016-11-08  Christian Fischer <christian.fischer@greenbone.net>

	* nasl/nasl_var.c (nasl_array_iterator): Add lexic context to
	nasl_perror() call.

	* nasl/nasl_var.h: Adjust function header.

	* nasl/exec.c (nasl_exec): Adjust nasl_array_iterator call.

2016-11-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/exec.c (cell2int3, cell2int, cell2intW, int2cell): Change
	returned variable from int to long int.
	(cell_cmp, nasl_exec): Use long int instead of int for nasl integer variables.

	* nasl/nasl_grammar.y (YYSTYPE): Change num type to long int.

	* nasl/nasl_tree.h (tree_cell): Change i_val type to long int.

	* nasl/nasl_tree.c (dump_cell_val): Adjust for i_val type change.

	* nasl/nasl_var.h (anon_nasl_var): Change v_int type to long int.
